--- a/landing/style.css
+++ b/landing/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   Atlantis United
+ Theme Name:   Atlantis Lab
  Template:     yootheme
  Author:       Andrew Ghostuhin
- Version:      1.0.0
+ Version:      0.0.0
  Text Domain:  yootheme-child
 */
